# FastAPI-project

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 12424eba52b5_moving_is_activate_to_user_table.py  fc9da4c3e4ba_.py
api/: courses.py  users.py
api/utils/: courses.py  users.py
database/: db_setup.py
database/models/: course.py  user.py
pydantic_schemas/: course.py  user.py
