[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Andrey.K <andrey-8991@yandex.ru>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
