[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Andrey.K <andrey-8991@yandex.ru>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.28"
psycopg2-binary = "^2.9.2"
SQLAlchemy-Utils = "^0.37.9"
alembic = "^1.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
