[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["Andrey.K <andrey-8991@yandex.ru>"]
readme = "README.md"
packages = [{include = "fastapi_project"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.16.0"
fastapi = "^0.70.1"
pydantic = "^1.8.2"
SQLAlchemy = "^1.4.28"
psycopg2-binary = "^2.9.2"
SQLAlchemy-Utils = "^0.37.9"
alembic = "^1.8.1"
asyncpg = "^0.26.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
ignore = ["E203", "E266", "E501", "W503", "F403", "F401"]
max-line-length = 79
max-complexity = 18
select = ["B", "C", "E", "F", "W", "T4", "B9"]

[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | alembic
)/
'''